# dummy_bot

./: Dockerfile  README.md  config.py  docker-compose.yaml  example.env  main.py  pyproject.toml
cmd/: main.py
config/: config.py
dummy_bot/: main.py
dummy_bot/bot/: config.py  db_queries.py  fsm.py  handlers.py  interfaces.py  models.py  utils.py
dummy_bot/cmd/: main.py
dummy_bot/config/: config.py
dummy_bot/db/: crud.py  database.py  models.py  redis.py  schemas.py
dummy_bot/internal/app/: app.py
dummy_bot/internal/dto/: dto.py  enums.py
dummy_bot/internal/logger/: logger.py
dummy_bot/internal/middleware/: admins_mw.py  session_mw.py
dummy_bot/internal/models/: models.py
dummy_bot/internal/presentation/: commands.py  decorators.py  filters.py  interfaces.py  mention.py  text.py  (+2 more)
dummy_bot/middlewares/: check_admins_middleware.py  db_middleware.py
internal/app/: app.py
internal/dto/: dto.py
internal/fsm/: fsm.py
internal/middleware/: admins_mw.py
internal/presentation/: commands.py  decorators.py  interfaces.py  start.py  states.py  text.py
internal/repository/: group.py  media.py  pokak.py  statistics.py  user.py
internal/usecase/: commands.py  interfaces.py  media.py  mute.py  pokak.py  statistics.py
internal/utils/: stat_flter.py  stat_report.py
migrations/: env.py
migrations/versions/: 71c129cc19d6_rename_user_full_name_to_user_fullname.py  84e725c99dbe_initial_commit.py  df0f43073afb_edit_telegram_chat_ids_from_varchar_to_.py  e49f90c6caac_rework_columns_to_mapped.py  f4cc83f385ec_edit_created_at_and_updated_at_coloumn_.py
(+20 files in other folders)
